# dita-semantic-tests

./: .gitignore  README.md  pyproject.toml
resources/app/: config.json  converter.sh
resources/dita/: reference.dita  task.dita
semantic_testing/: config.py  parse_tasks.py  running.py  spellcheck.py
